# boilerplate

./: CMakeLists.txt  _clang-format  cmake_configure  meson.build  meson_configure
cmake/: AddFlags.cmake  AddWarnings.cmake  ClangTidy.cmake  DisableExceptions.cmake  DisableRTTI.cmake  FixDefaultFlags.cmake  IWYU.cmake  PlatformChecks.cmake  Sanitize.cmake  SetCXX20.cmake  StackProtector.cmake
